# supcom-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
docs/plans/: 2026-03-09-decal-normal-maps-design.md  2026-03-09-decal-normal-maps-plan.md  2026-03-13-m153-m154-smoke-test-plan.md  2026-03-13-m153-m163-playable-skirmish-design.md  2026-03-14-playable-skirmish-vs-ai-design.md  2026-03-15-m166-hybrid-smoke-test-design.md  2026-03-15-m166-hybrid-smoke-test-plan.md  2026-03-15-m167-ai-builder-unblock-design.md  2026-03-15-m167-ai-builder-unblock-plan.md  2026-04-05-full-skirmish-completion-design.md  2026-04-05-full-skirmish-completion-plan.md
src/: integration_tests.cpp  integration_tests.hpp  main.cpp
src/audio/: CMakeLists.txt  sound_manager.cpp  sound_manager.hpp  xsb_parser.cpp  xsb_parser.hpp  xwb_parser.cpp  xwb_parser.hpp
src/blueprints/: CMakeLists.txt  blueprint_loader.cpp  blueprint_loader.hpp  blueprint_store.cpp  blueprint_store.hpp
src/core/: CMakeLists.txt  front_end_data.cpp  front_end_data.hpp  game_state.cpp  game_state.hpp  localization.cpp  localization.hpp  log.cpp  log.hpp  preferences.cpp  preferences.hpp  profiler.hpp  result.hpp  types.hpp
src/lua/: CMakeLists.txt  beat_system.cpp  beat_system.hpp  blueprint_bindings.cpp  blueprint_bindings.hpp  category_utils.cpp  category_utils.hpp  engine_bindings.cpp  engine_bindings.hpp  factory_queue.cpp  factory_queue.hpp  init_loader.cpp  init_loader.hpp  lua_state.cpp  lua_state.hpp  lua_stubs.hpp  moho_bindings.cpp  moho_bindings.hpp  order_helpers.cpp  order_helpers.hpp  scenario_loader.cpp  scenario_loader.hpp  session_manager.cpp  session_manager.hpp  sim_bindings.cpp  sim_bindings.hpp  sim_loader.cpp  sim_loader.hpp  smoke_test.cpp  smoke_test.hpp
src/map/: CMakeLists.txt  heightmap.cpp  heightmap.hpp  pathfinder.cpp  pathfinder.hpp  pathfinding_grid.cpp  pathfinding_grid.hpp  scmap_parser.cpp  scmap_parser.hpp  terrain.cpp  terrain.hpp  terrain_quadtree.cpp  terrain_quadtree.hpp  visibility_grid.cpp  visibility_grid.hpp
src/renderer/: CMakeLists.txt  army_colors.hpp  camera.cpp  camera.hpp  dds_decode.cpp  dds_decode.hpp  dds_parser.cpp  dds_parser.hpp  emitter_blueprint.cpp  emitter_blueprint.hpp  fog_renderer.cpp  fog_renderer.hpp  font_cache.cpp  font_cache.hpp  frustum.cpp  frustum.hpp  hud_renderer.cpp  hud_renderer.hpp  input_handler.cpp  input_handler.hpp  mesh_cache.cpp  mesh_cache.hpp  minimap_renderer.cpp  minimap_renderer.hpp  normal_overlay.cpp  normal_overlay.hpp  overlay_renderer.cpp  overlay_renderer.hpp  particle_renderer.cpp  particle_renderer.hpp  particle_system.cpp  particle_system.hpp  pipeline_builder.cpp  pipeline_builder.hpp  profile_overlay.cpp  profile_overlay.hpp  renderer.cpp  renderer.hpp  selection_info_renderer.cpp  selection_info_renderer.hpp  (+18 more)
src/renderer/shaders/: terrain.frag  terrain.vert  unit.frag  unit.vert  water.frag  water.vert
src/sim/: CMakeLists.txt  anim_cache.cpp  anim_cache.hpp  armor_definition.cpp  armor_definition.hpp  army_brain.cpp  army_brain.hpp  bone_cache.cpp  bone_cache.hpp  bone_data.cpp  bone_data.hpp  economy_event.hpp  entity.cpp  entity.hpp  entity_registry.cpp  entity_registry.hpp  ieffect.hpp  manipulator.cpp  manipulator.hpp  navigator.cpp  navigator.hpp  platoon.cpp  platoon.hpp  projectile.cpp  projectile.hpp  prop.hpp  sca_parser.cpp  sca_parser.hpp  scm_parser.cpp  scm_parser.hpp  shield.cpp  shield.hpp  sim_callback_queue.hpp  sim_state.cpp  sim_state.hpp  thread_manager.cpp  thread_manager.hpp  unit.cpp  unit.hpp  unit_command.hpp  (+3 more)
src/ui/: CMakeLists.txt  font_metrics_provider.cpp  font_metrics_provider.hpp  keymap.cpp  keymap.hpp  ui_control.cpp  ui_control.hpp  ui_dispatch.cpp  ui_dispatch.hpp  wld_ui_provider.cpp  wld_ui_provider.hpp  world_view.cpp  world_view.hpp
src/vfs/: CMakeLists.txt  directory_mount.cpp  directory_mount.hpp  mount_point.hpp  virtual_file_system.cpp  virtual_file_system.hpp  zip_mount.cpp  zip_mount.hpp
src/video/: CMakeLists.txt  video_decoder.cpp  video_decoder.hpp
tests/: CMakeLists.txt  test_anim_blend.cpp  test_army_stats.cpp  test_blueprint_loading.cpp  test_dds_decode.cpp  test_death_anim.cpp  test_frustum.cpp  test_init_loader.cpp  test_localization.cpp  test_lod.cpp  test_lua_state.cpp  test_map.cpp  test_normal_overlay.cpp  test_phase1.cpp  test_preferences.cpp  test_smoke_harness.cpp  test_smoke_test.cpp  test_terrain_quadtree.cpp  test_vfs.cpp  test_video_decoder.cpp
